Rules file are now read and watched for changes

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>${jdautilities.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+        </dependency>
     </dependencies>
 
 </project>
